$Id: History,v 1.25 2001-09-05 16:39:46 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
 03 sep 01: L.Urban (utils-V03-02-00)
- value of data member factlim has been changed.
     
 28 aug 01: mma
- G4MultipleScatteringx: small modifs in BuildPhysicsTable,
  ComputeTransportCrossSection, PostStepDoIt. 
  GetContinuousStepLimit and AlongStepDoIt moved to .cc file

 23 aug 01: L. Urban
- new angle and z(geom. pathlength) distributions,
  energy (step) dependence has been reduced,
  Store/Retrieve methods have been commented out temporarily
     
 8 aug 01: mma
- G4MultipleScatteringx: methods to store/retrieve PhysicsTable

18 may 01: V.Ivanchenko (utils-V03-01-01)
- clean up againist Linux ANSI strict compilation mode.
    
16 may 01: L.Urban (utils-V03-01-00)
- value of the member cpar has been changed back to the original
  value 1.5 in G4MultipleScattering.cc. The same is done in
  G4MultipleScatteringx.cc (the data member name is cparm there).
  This change affects all the results for low energy (< 1 MeV
  for electrons).
  
15 may 01: L.Urban
- new multiple scattering version committed under the class name
  G4MultipleScatteringx. It gives better msc angle distribution